--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>My second page</h1>
+  <button onclick="window.location.href = 'https://liemnguyen0111.github.io/';">Click me to go back to main page</button>
 </body>
 
 </html>
